# Configurable-Web-Server

./: CMakeLists.txt  README.md  abuild.sh  rebuild.sh
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: bad_request_handler.h  base64.h  config_parser.h  dispatcher.h  echo_handler.h  game_handler.h  header.h  health_handler.h  mime_types.h  not_found_handler.h  pic_modifier.h  proxy_handler.h  reply.h  request.h  request_handler.h  request_parser.h  server.h  session.h  static_handler.h  status_handler.h  utilities.h
src/: bad_request_handler.cc  config_parser.cc  dispatcher.cc  echo_handler.cc  game_handler.cc  health_handler.cc  mime_types.cc  not_found_handler.cc  pic_modifier.cc  proxy_handler.cc  reply.cc  request_parser.cc  server.cc  server_main.cc  session.cc  static_handler.cc  status_handler.cc  utilities.cc
static2/: CMake Lists.txt  index.html  独眼少女.txt
t_rex/: index.css  index.html  index.js
t_rex/game/: index.css  index.html  index.js
tests/: config  config_parser_test.cc  dispatcher_test.cc  docker_config  expected_incomplete.txt  expected_result_1.txt  expected_result_2.txt  expected_result_5.txt  integration_test.sh  multithreading_test.sh
tests/game/: request_body.txt
